[package]
name = "google_auth"
version = "0.1.0"
authors = ["nukr <nukrs.w@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={ version = "0.10.6", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "7.1.2"
anyhow = "1.0.31"
