[package]
name = "google_auth"
version = "0.1.2"
authors = ["nukr <nukrs.w@gmail.com>"]
edition = "2018"
license = "MIT"
description = "get google default credentials"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest={ version = "0.10.6", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "7.1.2"
anyhow = "1.0.31"
